package interfaces;

import logic.game.Player;

public interface Interactable {
    void interact(Player player);
}