package interfaces;

import logic.game.Player;

public interface Pickable {
    void onPick(Player player);
}