package rewards;

public class Backpack extends Reward {
    public Backpack() {
        super("Backpack", 4);
    }
}