package rewards;

public class ChatGPTPro extends Reward {
    public ChatGPTPro() {
        super("ChatGPT Pro (3 months)", 5);
    }
}