package rewards;

public class Glasses extends Reward {
    public Glasses() {
        super("Glasses", 1);
    }
}