package rewards;

public class Mouse extends Reward {
    public Mouse() {
        super("Mouse", 2);
    }
}