package rewards;

public class Notebook extends Reward {
    public Notebook() {
        super("Notebook", 3);
    }
}